--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,18 @@
 	<head>
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 			<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+			<link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
 			
 	</head>
 	<body>
+			<script>(function(d, s, id){
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) {return;}
+				js = d.createElement(s); js.id = id;
+				js.src = "//connect.facebook.net/en_US/messenger.Extensions.js";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'Messenger'));</script>
+
 		<div id="root"></div>
 	</body>
 </html>
