--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 			<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 			<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+			<meta charset="UTF-8">
 
 			
 	</head>
