add edit poi add images for poi fix empty poiFilter screen fix no Poi for festival add image to compass navigator

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://webview.festbot.com/carousel.min.css" />
-
+	<script>
+		UPLOADCARE_PUBLIC_KEY = 'f901eb6f977e50e57615';
+	  </script>
 	<meta charset="UTF-8">
 	<script>(function (d, s, id) {
 		var js, fjs = d.getElementsByTagName(s)[0];
